Fixing layout bug
Bug involving printing on chrome and edge at page breaks, code cleaned up but bug still present

--- a/BarcodeStylePrint.css
+++ b/BarcodeStylePrint.css
@@ -19,14 +19,30 @@
 }
 .barcode-container {	
 	display: inline-block;
+	position: relative;
 	box-sizing: border-box;
+	/*border: 2px solid black;*/
 	background-color: white;
 	width: 33.3%;
 	aspect-ratio: 1.89/1;
 	page-break-inside: avoid;
+	vertical-align: top;
+}
+p {
+	margin-top: 0px;
+	line-height: 1.1;
+	display: inline-block;
+	vertical-align: middle;
+	font-family: Arial;
+}
+.totalp {
+	font-size: 32pt;
+	margin: 0px;
+	font-weight: bold;
 }
 #total-container {	
 	display: inline-block;
+	position: relative;
 	justify-content: center;
 	align-items: center;
 	box-sizing: border-box;
@@ -36,13 +52,9 @@
 	width: 33.3%;
 	aspect-ratio: 1.89/1;
 	text-align: center;
-	line-height: 2cm;
 	page-break-inside: avoid;
-}
-#qtyspan {
-	display: inline-block;
-	vertical-align: middle;
-	line-height: 10mm;
+	margin: 0px;
+	vertical-align: top;
 }
 h1 {
 	font-family: Arial;
